Make circleci config optional

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,3 +2,4 @@ project_name      = awesome-igniter-project
 organization      = ig.ni.ter
 organization_name = Igniter
 package           = $organization$
+circleci          = true
