Switch to minitest, update scalafmt config

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.0.0-RC8"
+version = "2.0.0"
 
 align.openParenCallSite = true
 align.openParenDefnSite = true
@@ -7,6 +7,6 @@ continuationIndent.defnSite = 2
 danglingParentheses = true
 docstrings = JavaDoc
 maxColumn = 120
-project.excludeFilters = [".*\\.sbt"]
+project.excludeFilters = [".*\\.sbt", ".*Main.scala"]
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
