Add backslash because g8 removes one

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -7,6 +7,6 @@ continuationIndent.defnSite = 2
 danglingParentheses = true
 docstrings = JavaDoc
 maxColumn = 120
-project.excludeFilters = [".*\\.sbt"]
+project.excludeFilters = [".*\\\.sbt"]
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
