Add optional dependency on cats-core, bump up versions

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,3 +3,4 @@ organization      = ig.ni.ter
 organization_name = Igniter
 package           = $organization$
 circleci          = true
+cats              = true
