Add support for GitHub Actions

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -3,4 +3,5 @@ organization      = ig.ni.ter
 organization_name = Igniter
 package           = $organization$
 circleci          = true
-cats              = true
+gh_actions        = true
+cats              = false
