--- a/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
+++ b/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
@@ -1,17 +1,23 @@
 name: Scala CI
 
-on: [push]
+on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
+    # needed when locally with `act`
+    env:
+      RUNNER_OS: linux
+
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Run tests
-      run: sbt test
+      - uses: actions/checkout@v2
+      - uses: olafurpg/setup-scala@v5 # uses Java version adopt@1.8 by default
+        # with:
+        # java-version: adopt@1.11
+      - name: Run tests
+        run: sbt validate
