Update formatting rules and bump up scalafmt versions

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.0.1"
+version = "2.5.0-RC2"
 
 align.openParenCallSite = true
 align.openParenDefnSite = true
@@ -6,7 +6,7 @@ assumeStandardLibraryStripMargin = true
 continuationIndent.defnSite = 2
 danglingParentheses = true
 docstrings = JavaDoc
-maxColumn = 120
-project.excludeFilters = [".*\\\.sbt"]
+maxColumn = 100
+project.excludeFilters = [".*\\.sbt"]
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
