--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,4 @@
-version = "2.0.1"
+version = "2.5.0-RC2"
 
 align.openParenCallSite = true
 align.openParenDefnSite = true
@@ -6,7 +6,7 @@ assumeStandardLibraryStripMargin = true
 continuationIndent.defnSite = 2
 danglingParentheses = true
 docstrings = JavaDoc
-maxColumn = 120
+maxColumn = 100
 project.excludeFilters = [".*\\.sbt", ".*Main.scala"]
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
