Various updates and scalafix

--- a/src/main/g8/.scalafmt.conf
+++ b/src/main/g8/.scalafmt.conf
@@ -1,12 +1,13 @@
-version = "2.5.0-RC2"
+version = "2.7.0"
 
+align.preset=more
 align.openParenCallSite = true
 align.openParenDefnSite = true
 assumeStandardLibraryStripMargin = true
 continuationIndent.defnSite = 2
-danglingParentheses = true
 docstrings = JavaDoc
 maxColumn = 100
-project.excludeFilters = [".*\\.sbt"]
+newlines.topLevelStatements = [before, after]
+newlines.topLevelStatementsMinBreaks = 4
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
