--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -2,6 +2,6 @@ project_name      = awesome-igniter-project
 organization      = ig.ni.ter
 organization_name = Igniter
 package           = $organization$
-circleci          = true
+circleci          = false
 gh_actions        = true
-cats              = false
+cats              = true
