--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v5 # uses Java version adopt@1.8 by default
-        # with:
-        # java-version: adopt@1.11
+      - uses: olafurpg/setup-scala@v10
+        with:
+          java-version: adopt@1.11
       - name: Run tests
         run: sbt g8Test
