--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,9 +2,9 @@ name: Scala CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v10
         with:
-          java-version: adopt@1.11
+          java-version: adopt@1.11s
       - name: Run tests
         run: sbt g8Test
