--- a/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
+++ b/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
@@ -2,9 +2,9 @@ name: Scala CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -16,8 +16,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v5 # uses Java version adopt@1.8 by default
-        # with:
-        # java-version: adopt@1.11
+      - uses: olafurpg/setup-scala@v10 # uses Java version adopt@1.8 by default
+        with:
+          java-version: adopt@1.11
       - name: Run tests
         run: sbt validate
