--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: olafurpg/setup-scala@v10
         with:
-          java-version: adopt@1.11s
+          java-version: adopt@1.11
       - name: Run tests
         run: sbt g8Test
