--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,12 +1,12 @@
-version = "2.5.0-RC2"
-
+version = "2.7.4"
+align.preset=more
 align.openParenCallSite = true
 align.openParenDefnSite = true
 assumeStandardLibraryStripMargin = true
 continuationIndent.defnSite = 2
-danglingParentheses = true
 docstrings = JavaDoc
 maxColumn = 100
-project.excludeFilters = [".*\\.sbt", ".*Main.scala"]
+newlines.topLevelStatements = [before, after]
+newlines.topLevelStatementsMinBreaks = 4
 rewrite.rules = [AvoidInfix, SortImports, RedundantBraces, RedundantParens, SortModifiers]
 spaces.inImportCurlyBraces = true
