--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -2,9 +2,9 @@ name: Scala CI
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v10
+      - uses: olafurpg/setup-scala@v11
         with:
           java-version: adopt@1.11
       - name: Run tests
