--- a/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
+++ b/src/main/g8/$if(gh_actions.truthy)$.github$endif$/workflows/scala.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: olafurpg/setup-scala@v10 # uses Java version adopt@1.8 by default
+      - uses: olafurpg/setup-scala@v11
         with:
           java-version: adopt@1.11
       - name: Run tests
