--- a/src/main/g8/.scalafix.conf
+++ b/src/main/g8/.scalafix.conf
@@ -1,5 +1,5 @@
 rules = [OrganizeImports]
 
 OrganizeImports {
-  groups = ["re:javax?\\.", "scala.", "akka.", "akka.http.", "cats.", "doobie.", "io.circe.", "munit.", "org.http4s.", "*", "io.ontherocks"]
+  groups = ["re:javax?\\.", "scala.", "cats.", "doobie.", "io.circe.", "munit.", "org.http4s.", "*", "io.ontherocks"]
 }
