--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,10 +1,11 @@
-version = "3.2.1"
+version = "3.5.8"
+runner.dialect = scala3
 align.preset=more
 align.openParenCallSite = true
 align.openParenDefnSite = true
 assumeStandardLibraryStripMargin = true
 continuationIndent.defnSite = 2
-docstrings = JavaDoc
+docstrings.style = Asterisk
 maxColumn = 100
 newlines.topLevelStatements = [before, after]
 newlines.topLevelStatementsMinBreaks = 4
