--- a/src/main/g8/.scalafix.conf
+++ b/src/main/g8/.scalafix.conf
@@ -1,5 +1,7 @@
 rules = [OrganizeImports]
 
 OrganizeImports {
-  groups = ["re:javax?\\.", "scala.", "cats.", "doobie.", "io.circe.", "munit.", "org.http4s.", "*", "io.ontherocks"]
+  groupedImports = Merge
+  groups = ["re:javax?\\\.", "scala.", "cats.", "io.circe.", "munit.", "*", "io.ten15bit"]
+  removeUnused = false
 }
