Fix package name

--- a/src/main/g8/.scalafix.conf
+++ b/src/main/g8/.scalafix.conf
@@ -2,6 +2,6 @@ rules = [OrganizeImports]
 
 OrganizeImports {
   groupedImports = Merge
-  groups = ["re:javax?\\\.", "scala.", "cats.", "io.circe.", "munit.", "*", "io.ten15bit"]
+  groups = ["re:javax?\\\.", "scala.", "cats.", "io.circe.", "munit.", "*", "$package$"]
   removeUnused = false
 }
