Use cats-effect (#38)
* Use cats-effect and scribe, update scalafix organize-imports, update readme

* Fix package name

--- a/src/main/g8/.scalafix.conf
+++ b/src/main/g8/.scalafix.conf
@@ -1,5 +1,7 @@
 rules = [OrganizeImports]
 
 OrganizeImports {
-  groups = ["re:javax?\\.", "scala.", "cats.", "doobie.", "io.circe.", "munit.", "org.http4s.", "*", "io.ontherocks"]
+  groupedImports = Merge
+  groups = ["re:javax?\\\.", "scala.", "cats.", "io.circe.", "munit.", "*", "$package$"]
+  removeUnused = false
 }
